refactor : 함수 10줄이하로 분해